# hydrowizard

./: .gitignore  .readthedocs.yaml  LICENSE  MANIFEST.in  README.md  make_release.sh  pyproject.toml  setup.py  setup_env.sh
.github/workflows/: ci.yml  docs.yml  release.yml
docs/source/: conf.py  hydrowizard.rst  hydrowizard.scripts.rst  index.rst  license.rst  modules.rst  optimize.rst  requirements.txt  simulate.rst
examples/: optimization.sh  simulation.sh
examples/basins/lower-omo/: Bathymetry Gibe-III.csv  Bathymetry Koysha.csv  config.yaml
hydrowizard/: basin.py  db_logging.py  flow.py  node.py  optimization.py  rbf_network.py
hydrowizard/scripts/: run_optimization.py  run_simulation.py
tests/: test_optimization.py  test_simulation.py
