[tool.poetry]
name = "hydrowizard"
version = "0.2.0"
description = "HydroWizard: State-of-the-art water basin modeling, optimization, and simulation using neural networks, genetic algorithms, and DAGs."
authors = ["Yugdeep Bangar <yugdeep@hydrowizard.ai>"]
license = "Other"
readme = "README.md"
repository = "https://github.com/yugdeep/hydrowizard"
homepage = "https://www.hydrowizard.ai"
packages = [{ include = "hydrowizard" }]
include = [
    "MANIFEST.in",
    "setup.py",
    "docs/**/*.bat",
    "docs/**/*.py",
    "docs/**/*.txt",
    "docs/**/*.rst",
    "docs/Makefile",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.10"
graphviz = "^0.20.3"
matplotlib = "^3.8.0"
networkx = "^3.3"
numpy = "^2.0.1"
openpyxl = "^3.1.5"
pandas = "^2.2.2"
psycopg2-binary = "^2.9.9"
pymoo = "^0.6.1.3"
pytz = "^2024.1"
PyYAML = "^6.0.1"
sqlalchemy = "^2.0.31"
tqdm = "^4.66.4"

[tool.poetry.dev-dependencies]
check-manifest = "^0.49"
flake8 = "^7.1.0"
pytest = "^8.3.2"
twine = "^5.1.1"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^7.4.7"
sphinx_rtd_theme = "^2.0.0"
myst-parser = "^2.0.0"
rst2pdf = "^0.102"

[build-system]
requires = ["poetry>=1.8.3"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
hw-simulation = "hydrowizard.scripts.run_simulation:main_entry"
hw-optimization = "hydrowizard.scripts.run_optimization:main_entry"
